--- a/src/sass/modules/_header.scss
+++ b/src/sass/modules/_header.scss
@@ -21,7 +21,7 @@
 		top: 0;
 		right: 0;
 		left: 0;
-		z-index: 5;
+		z-index: $site-header-z-index;
 	}
 }
 
